# OctaneGUI

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CREDITS  Doxygen  LICENSE  README.md
Apps/: CMakeLists.txt
Apps/Blank/: Blank.json  CMakeLists.txt  Main.cpp
Apps/CodeEdit/: CMakeLists.txt  CodeEdit.json  Main.cpp
Apps/CustomLoop/: CMakeLists.txt  Main.cpp
Apps/Designer/: App.json  CMakeLists.txt  Main.cpp
Apps/Hello/: CMakeLists.txt  Main.cpp
Apps/Overview/: CMakeLists.txt  Main.cpp  Overview.json
Apps/Resources/: Icons.json
Apps/Resources/Layouts/: Overview.json
Apps/Resources/Themes/: Classic.json  Dark.json
Apps/Tests/: Button.cpp  CMakeLists.txt  CheckBox.cpp  Checkbox.cpp  ComboBox.cpp  Container.cpp  CustomControl.cpp  FlyString.cpp  Json.cpp  ListBox.cpp  Main.cpp  MenuBar.cpp  RadioButton.cpp  Rect.cpp  Scrollable.cpp  Splitter.cpp  Table.cpp  TestSuite.cpp  TestSuite.h  Text.cpp  TextInput.cpp  Utility.cpp  Utility.h  Variant.cpp
Frontends/: CMakeLists.txt  Frontend.cpp  Frontend.h  Interface.h
Frontends/Rendering/: CMakeLists.txt  Rendering.h
Frontends/Rendering/Metal/: Rendering.mm
Frontends/Rendering/OpenGL/: Rendering.cpp
Frontends/Rendering/SFML/: Rendering.cpp
Frontends/SDL/: CMakeLists.txt  Interface.h  Interface.mm
Frontends/SFML/: CMakeLists.txt  Interface.cpp  Interface.h
Frontends/Windowing/: CMakeLists.txt  Windowing.cpp  Windowing.h
Frontends/Windowing/Linux/: Windowing.cpp
Frontends/Windowing/Mac/: Interface.h  Windowing.h  Windowing.mm
Frontends/Windowing/SDL2/: Interface.h  Windowing.cpp
Frontends/Windowing/SFML/: Interface.h  Windowing.cpp
Frontends/Windowing/Windows/: Interface.h  Windowing.cpp  Windowing.h
Scripts/: Build.bat  Build.sh  BuildNinja.bat  BuildVS.bat  ClangFormat.bat  ClangFormat.sh  Clean.bat  Clean.sh  Defines.bat  Defines.sh  Doxymark.bat  Doxymark.sh  Generate.bat  Generate.sh  GenerateDocs.bat  GenerateDocs.sh  VCVars.bat
Source/OctaneGUI/: Alignment.cpp  Alignment.h  Application.cpp  Application.h  Assert.cpp  Assert.h  CMakeLists.txt  CallbackDefs.h  Class.cpp  Class.h  Clock.cpp  Clock.h  Color.cpp  Color.h  CommandLine.cpp  CommandLine.h  Defines.h  DrawCommand.cpp  DrawCommand.h  Event.cpp  Event.h  FileSystem.cpp  FileSystem.h  FlyString.cpp  FlyString.h  Font.cpp  Font.h  Icons.cpp  Icons.h  Json.cpp  Json.h  Keyboard.h  LanguageServer.cpp  LanguageServer.h  Mouse.h  Network.cpp  Network.h  OctaneGUI.h  Orientation.cpp  Orientation.h  (+34 more)
Source/OctaneGUI/Controls/: BoxContainer.cpp  BoxContainer.h  Button.cpp  Button.h  Canvas.cpp  Canvas.h  CheckBox.cpp  CheckBox.h  ComboBox.cpp  ComboBox.h  Container.cpp  Container.h  Control.cpp  Control.h  ControlList.cpp  ControlList.h  CustomControl.cpp  CustomControl.h  GroupBox.cpp  GroupBox.h  HorizontalContainer.cpp  HorizontalContainer.h  Image.cpp  Image.h  ImageButton.cpp  ImageButton.h  ListBox.cpp  ListBox.h  MarginContainer.cpp  MarginContainer.h  Menu.cpp  Menu.h  MenuBar.cpp  MenuBar.h  MenuItem.cpp  MenuItem.h  Panel.cpp  Panel.h  RadioButton.cpp  RadioButton.h  (+32 more)
Source/OctaneGUI/Controls/Syntax/: Highlighter.cpp  Highlighter.h  JsonHighlighter.cpp  JsonHighlighter.h  Lexer.h  Rules.cpp  Rules.h
Source/OctaneGUI/Dialogs/: FileDialog.cpp  FileDialog.h  FileDialogType.h  MessageBox.cpp  MessageBox.h
Source/OctaneGUI/Tools/: CommandPalette.cpp  CommandPalette.h  Commands.cpp  Commands.h  Inspector.cpp  Inspector.h  Mouse.cpp  Mouse.h  ProfileViewer.cpp  ProfileViewer.h  Profiler.cpp  Profiler.h  Properties.cpp  Properties.h  TextureViewer.cpp  TextureViewer.h  Tools.cpp  Tools.h
Source/OctaneUI/: Application.cpp  Application.h  CMakeLists.txt  CallbackDefs.h  Class.cpp  Class.h  ClipRegion.cpp  ClipRegion.h  Clock.cpp  Clock.h  Color.cpp  Color.h  DrawCommand.cpp  DrawCommand.h  Event.cpp  Event.h  Font.cpp  Font.h  Icons.cpp  Icons.h  Json.cpp  Json.h  Keyboard.h  Mouse.h  OctaneUI.h  Paint.cpp  Paint.h  Popup.cpp  Popup.h  Rect.cpp  Rect.h  Texture.cpp  Texture.h  TextureCache.cpp  TextureCache.h  Theme.cpp  Theme.h  ThemeProperties.cpp  ThemeProperties.h  Timer.cpp  (+11 more)
Source/OctaneUI/Controls/: BoxContainer.cpp  BoxContainer.h  Button.cpp  Button.h  CheckBox.cpp  CheckBox.h  Checkbox.cpp  Checkbox.h  ComboBox.cpp  ComboBox.h  Container.cpp  Container.h  Control.cpp  Control.h  ControlList.cpp  ControlList.h  HorizontalContainer.cpp  HorizontalContainer.h  Image.cpp  Image.h  ImageButton.cpp  ImageButton.h  ListBox.cpp  ListBox.h  MarginContainer.cpp  MarginContainer.h  Menu.cpp  Menu.h  MenuBar.cpp  MenuBar.h  MenuItem.cpp  MenuItem.h  Panel.cpp  Panel.h  ScrollBar.cpp  ScrollBar.h  ScrollableContainer.cpp  ScrollableContainer.h  ScrollableViewControl.cpp  ScrollableViewControl.h  (+12 more)
Tools/doxymark/: Cargo.toml
Tools/doxymark/src/: class.rs  document.rs  element.rs  main.rs  manifest.rs  utility.rs
cmake/: OctaneGUIConfig.cmake
